[package]
name = "quic-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
rcgen = "0.8"
rustls = "0.20"
futures-util = "0.3"
humansize = "1"
pretty_env_logger = "0.4"
