[package]
name = "quic-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
clap = { version = "4.3.1", features = ["derive"] }
fern = "0.6.2"
humansize = "2.1.3"
quinn = { version = "0.10.1", features = ["tls-rustls"] }
rcgen = "0.10.0"
rustls = { version = "0.21.1", features = ["quic", "dangerous_configuration"] }
rustls-pemfile = "1.0.2"
time = { version = "0.3.21", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
